--- a/scripts/ansible/rsshub.env
+++ b/scripts/ansible/rsshub.env
@@ -1,4 +1,4 @@
 NODE_ENV=production
 CACHE_TYPE=redis
 PUPPETEER_WS_ENDPOINT=ws://localhost:3000
-PROXY_URI: http://194.50.171.164:443
+PROXY_URI: http://qiniuweihe:54rucman@34.84.247.205:500
